fix too much spacing

--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_sidebar.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_sidebar.scss
@@ -58,6 +58,11 @@
       display: none;
     }
   } 
+  & > .sections > li > .sections > li,
+  & > .sections > li > .sections > li > .sections > li,
+  & > .sections > li > .sections > li > .sections > li > .sections > li {
+    margin-top: 8px;
+  }
   & > .sections > .link-wrap > .tree-nav-link,
   & > .sections > .link-wrap > .tree-nav-link a {
     color: cv('link', 'darker');
